  CHANGES IN BayesFactor VERSION 0.9.12-4.5

CHANGES
* Fixed unclear error message when ttestBF is used with a factor with more than two levels

  CHANGES IN BayesFactor VERSION 0.9.12-4.4

* Removes dependence on the orphaned {gtools} package.

  CHANGES IN BayesFactor VERSION 0.9.12-4.3

CHANGES
* Fixed issue computing Bayes factor in t test with very large N
* Fixed issue sampling posteriors when an interaction was included with out its constituent effects
* Fixed consistency between model matrix column names
* Fixed issue with special characters in column names
* Fixed various typos in manuals

  CHANGES IN BayesFactor VERSION 0.9.12-4.2

CHANGES
  * Fixed issue preventing Solaris compilation (affected 0.9.12-4 and 0.9.12-4.1)

  CHANGES IN BayesFactor VERSION 0.9.12-4

CHANGES
  * Fixed issue with numerical integration in proportionBF with large N
  * New function correlationBF - implements Jeffreys' correlation Bayes factor tests
  * Fixed rare bug that prevented sampling posteriors in some circumstances
  * Sampling regression models now provides estimate intercept. This may break some old code if you were referring to columns by number instead of name.
  * Fixed bug preventing recompute() from working in some cases.
  * Replaced Matrix::cBind (deprecated) with cbind

  CHANGES IN BayesFactor VERSION 0.9.12-2

CHANGES
  * Added feature allowing fine-tuning of priors on a per-effect basis: see new argument
    rscaleEffects of lmBF, anovaBF, and generalTestBF
  * Fixed bug that disallowed logical indexing of probability objects
  * Fixed minor typos in documentation
  * Fixed bug causing regression Bayes factors to fail for very small R^2
  * Fixed bug disallowing expansion of dot (.) in generalTestBF model specifications
  * Fixed bug preventing cancelling of all analyses with interrupt
  * Restricted contingency prior to values >=1
  * All BFmodel objects have additional "analysis" slot giving details of analysis

  CHANGES IN BayesFactor VERSION 0.9.11-1
