@@ -13,7 +13,7 @@ regression, correlations, proportions, and contingency tables.
 }
 \details{
 \tabular{ll}{ Package: \tab BayesFactor\cr Type: \tab Package\cr Version: \tab
-0.9.12-4.4\cr Date: \tab 2021-07-04\cr License: \tab GPL 2.0\cr LazyLoad: \tab
+0.9.12-4.5\cr Date: \tab 2023-09-20\cr License: \tab GPL 2.0\cr LazyLoad: \tab
 yes\cr } The following methods are currently implemented, with more to follow:
 
 general linear models (including linear mixed effects models): \code{\link{generalTestBF}}, \code{\link{lmBF}}
